[project]
name = "qaoa"
version = "0.1.0"
description = "Quantum Approximate Optimization Algorithm experiments"
authors = [{ name = "Your Name" }]
dependencies = [
    "qiskit",
    "qiskit-aer",
    "qiskit-ibm-runtime",
    "qiskit-optimization",
    "matplotlib",
    "numpy",
    "pytest"
]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

